--- a/www/custom_styles.css
+++ b/www/custom_styles.css
@@ -9,7 +9,7 @@
 }
 
 .box {
-    margin-bottom: 0;
+    margin-bottom: 20px;
 }
 
 .box.box-warning {
@@ -55,9 +55,9 @@ div.outer {
     top: 41px;
     left: 0;
     right: 0;
-    bottom: 0;
+    /* bottom: 0; */
     overflow: hidden;
-    padding: 0;
+    /* padding: 0; */
 }
 
 div.graph-outer {
@@ -66,9 +66,9 @@ div.graph-outer {
     top: 0;
     left: 0;
     right: 0;
-    bottom: 0;
+    /* bottom: 0; */
     overflow: hidden;
-    padding: 0;
+    /* padding: 0; */
 }
 
 /* Customize fonts */
@@ -82,7 +82,7 @@ h1, h2, h3, h4 { font-weight: 400; }
 #controls {
   /* Appearance */
   background-color: white;
-  padding: 0 0 0 0;
+  /* padding: 0 0 0 0; */
   cursor: move;
   /* Fade out while not hovering */
   opacity: 0.9;
@@ -100,7 +100,7 @@ h1, h2, h3, h4 { font-weight: 400; }
   background-color: transparent;
   border-color: transparent;
   box-shadow: none;
-  padding: 0 0 0 0;
+  /* padding: 0 0 0 0; */
   /* Fade out while not hovering */
   opacity: 0.85;
   zoom: 0.9;
@@ -137,7 +137,7 @@ h1, h2, h3, h4 { font-weight: 400; }
   background-color: white !important;
 }
 
-.bottom-align {
-    position: absolute;
-    bottom: 12px;
-}
+/* .bottom-align { */
+/*     position: absolute; */
+/*     bottom: 12px; */
+/* } */
